2001-08-08  Matthias Clasen  <matthiasc@waldgeist.poet.de>

	* gtk/gtktreestore.c (gtk_tree_store_iter_n_children): Don't
	fail if iter is NULL. (#58347)

2001-08-07  Matthias Clasen  <matthiasc@waldgeist.poet.de>

	* gtk/gtktextdisplay.c (render_para, gtk_text_layout_draw): Fix
	some off-by-one issues, fixing selection of line-ends. (#50323)

2001-08-07  Matthias Clasen  <matthiasc@waldgeist.poet.de>

	* gtk/gtkhsv.c (gtk_hsv_map, gtk_hsv_unmap): Reinstate these
	functions in order to make mouse operation work again in the
	color wheel. (#58604)

2001-08-07  James Henstridge  <james@daa.com.au>

	* gtk/gtkaccellabel.c (gtk_accel_label_set_accel_object): refetch
	the accelerator when the accel object is changed.  Fixes bug
	#58628.

2001-08-06  HideToshi Tajima  <tajima@eng.sun.com>

	* modules/input/gtkimcontextxim.c (mb_to_utf8), xim_text_to_utf8):
	Skip g_convert when to_codeset and from_codeset are both 'UTF-8'
	(gnome bugzilla #58202)

2001-08-06  Havoc Pennington  <hp@pobox.com>
 
 	* gdk/x11/gdkimage-x11.c (_gdk_x11_get_image): The whole 
 	GDK_IS_WINDOW() branch of this was a bit screwed up, because 
 	it was expecting a GdkWindow, not a GdkWindowImplX11.
 
 	Also, we were getting the window rect in screen coords 
 	and the screen rect in window coords then intersecting 
 	them; instead, get window rect in window coords.
 
 	Finally, there were codepaths that resulted in a stuck server grab
 	(when the window was fully onscreen, or on gdk_image_new()
 	failure); make the server ungrab thing a bit more
 	robust/consistent.

2001-08-06  Sven Neumann  <sven@gimp.org>

	* gdk/gdkpango.c (gdk_pango_context_destroy): 
	check if info->colormap != NULL before unref'ing it. It might have
	been set to NULL using gdk_pango_context_set_colormap().

Sun Aug  5 11:24:27 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkcolorsel.c (gtk_color_selection_set_current_alpha): 
	Fix conversion from float to int so that we don't get
	skew in the int => float => int roundtrip. 