@@ -639,6 +639,7 @@ gdk_utf8_to_compound_text (const gchar *str,
     
   result = gdk_string_to_compound_text (locale_str,
 					encoding, format, ctext, length);
+  result = (result == Success? TRUE : FALSE);
   
   g_free (locale_str);
 
